src/themes/OLH/assets/scss/app.scss
/* ... */
/* Reading Options Bar fonts */

@font-face {
  font-family: "OpenDyslexic";
  src: url("../../common/fonts/opendyslexic/OpenDyslexic-Regular.otf") format("opentype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "OpenDyslexic";
  src: url("../../common/fonts/opendyslexic/OpenDyslexic-Bold.otf") format("opentype");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

/* reading options bar apply user custom styles */
.text-format-region.tf-has-font *:not([class*="fa"]) {
  font-family: var(--tf-font) !important;
}

.text-format-region.tf-has-colour {
  background-color: var(--tf-bg) !important;
  color: var(--tf-fg) !important;
  /* Ease colour-scheme changes so switching is not jarring. */
  transition: background-color 0.4s ease-out, color 0.4s ease-out;
}
.text-format-region.tf-has-colour * {
  background-color: transparent !important;
  color: var(--tf-fg) !important;
  transition: background-color 0.4s ease-out, color 0.4s ease-out;
}

/* Moving to/from the default is a bigger jump, so a longer transition. */
.text-format-region.tf-default-transition,
.text-format-region.tf-default-transition * {
  transition: background-color 0.6s ease-out, color 0.6s ease-out;
}

.text-format-region.tf-has-colour {
  padding: rem-calc(20px);
}

/* Handles draw-attention by inverting when custom colours are active */
.text-format-region.tf-has-colour .draw-attention,
.text-format-region.tf-has-colour .draw-attention * {
  background-color: var(--tf-fg) !important;
  color: var(--tf-bg) !important;
}

/* Interactive controls now share the region background, so give them a
   foreground-coloured border to stay visually delineated. */
.text-format-region.tf-has-colour button,
.text-format-region.tf-has-colour .button,
.text-format-region.tf-has-colour input,
.text-format-region.tf-has-colour select,
.text-format-region.tf-has-colour textarea {
  border-color: var(--tf-fg) !important;
}

.text-format-region.tf-no-italics *:not([class*="fa"]) {
  font-style: normal !important;
}

.reading-options-bar .columns {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}

.reading-options-landmark + section {
  padding-top: 0;
}

.text-format-region.tf-has-colour .reading-options-bar,
.text-format-region.tf-has-colour .reading-options-bar * {
  background-color: $light-gray !important;
  color: $dark-gray !important;
}
.text-format-region.tf-has-font .reading-options-bar *:not([class*="fa"]) {
  font-family: $body-font-family !important;
}
.text-format-region.tf-no-italics .reading-options-bar *:not([class*="fa"]) {
  font-style: normal !important;
}

// OLH keeps the Foundation hamburger (.menu-icon) on the Reading Options toggle,
// so hide the caret meant for the other themes.
.mini-bar .title-bar-title .tf-options-caret {
  display: none;
}

// The Reading Options toggle is now wired by text_readability.js (not foundation)
.mini-bar .title-bar {
  display: none;
}


@media screen and (min-width: 640px) {
  .reading-options-bar.tf-bar-hidden {
    display: none;
  }
}

@media screen and (max-width: 639px) {
  .reading-options-bar {
    height: auto !important;
  }

  .mini-bar .title-bar {
    display: flex;
  }

  .reading-options-bar.tf-bar-hidden #options-menu {
    display: none;
  }

  .mini-bar .tf-close {
    display: none;
  }

  .a11y-bar-show-item {
    display: none;
  }
}

#content {
  .columns {
    padding-top: rem-calc(20px);
    padding-bottom: rem-calc(20px);
  }
  .side-info {
    h2 {
      text-transform: uppercase;
      font-size: rem-calc(18px);
      color: var(--primary-dark-color);
    }
    .sticky {
      width: 100%;
    }
    .sticky.is-stuck {
      overflow: auto;
      max-height: 100%;
    }

    .section {
      border-bottom: 1px solid $light-gray;
      padding: rem-calc(40px) rem-calc(40px);
    }
    ul {
      list-style-type: none;
      margin: 0;

      li {
        position: relative;
        margin-bottom: 10px;
        line-height: 1.3em;

        &:before {
          content: '';
          position: absolute;
          top: 50%;
          left: -56px;
          width: 30px;
          height: 2px;
          background: $light-gray;
        }
      }
    }
  }
}

.summary {
  text-align: center;
  @extend .white-text;
  margin-bottom: rem-calc(40px);

  .columns {
    border-right: 1px solid rgba(255, 255, 255, 0.1);
  }

  p {
    font-family: $header-font-family;
    font-size: rem-calc(36px);
    font-weight: 300;
    font-style: normal;
    margin-top: 0;
    margin-bottom: 0.5rem;
    line-height: 1.4;

    span {
      display: block;
      @extend .uppercase;
      font-size: rem-calc(14px);
    }
  }

  .bottom p {
    @extend .uppercase;
    font-size: rem-calc(14px);
  }

  .top {
    background: var(--primary-dark-color);
  }

  .bottom {
    background: var(--primary-light-color);
  }


  #license {
    max-width: 100%;

    p {
      white-space: normal;
      overflow-wrap: break-word;
    }
  }
}

footer {
  .logo-wrapper {
    padding-top: rem-calc(20px);
    padding-bottom: rem-calc(20px);
    height: $footer-height;
  }
  p, li {
    font-family: $header-font-family;
    font-size: rem-calc(12px);
    color: #333;
    margin: 0;
  }
  .columns:not(.logo-wrapper) {
    margin-top: rem-calc(12px);
    margin-bottom: rem-calc(12px);
  }
  #presswide_footer_text {
    margin-top: 0;
  }
  svg,
  img {
    max-height: 60px;
    max-width: 180px;
  }
  svg {
    path {
      fill: $white;
    }
  }
  ul {
    margin: 0;

    li a {
      @extend .uppercase;
      font-weight: bold;
      font-family: $header-font-family;
      font-size: rem-calc(12px);
      color: #333;
    }
  }
}

.author-info {
  font-size: rem-calc(12px);
  max-width: 50%;
  z-index: 1000;
}

ul .inline {
  display: inline;
}

table tr th {
  text-align: left;
}

table tr.active td {
  background-color: var(--primary-dark-color);
  color: var(--primary-light-color);
}
/* ... */

